<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#000"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_bg_top"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/layout_op_sub"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="center"
                android:onClick="onClick"
                android:src="@drawable/image_btn_back"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:clickable="false"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/image_back"
                android:textColor="@color/image_color_primary"
                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>

    <!--<Space-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="1" />-->
    <RelativeLayout
        android:id="@+id/relative_container"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <com.jsibbold.zoomage.ZoomageView
            android:id="@+id/GalleryPreviewImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/blank"
            app:zoomage_restrictBounds="false"
            app:zoomage_animateOnReset="true"
            app:zoomage_autoResetMode="UNDER"
            app:zoomage_autoCenter="true"
            app:zoomage_zoomable="true"
            app:zoomage_translatable="true"
            app:zoomage_minScale="0.6"
            app:zoomage_maxScale="8" />

    </RelativeLayout>


    <RadioGroup
        android:id="@+id/rg_modes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_bg_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/rb_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/image_btn_palette"
            android:gravity="center"
            android:onClick="onClick"
            android:textColor="#FFF" />

        <Space
            android:layout_width="@dimen/image_mode_space"
            android:layout_height="wrap_content" />



        <ImageButton
            android:id="@+id/btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:onClick="onClick"
            android:src="@drawable/image_btn_filter"
            android:textColor="#FFF" />
        <Space
            android:layout_width="@dimen/image_mode_space"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:onClick="onClick"
            android:src="@drawable/image_btn_delete"
            android:textColor="#FFF" />
        <Space
            android:layout_width="@dimen/image_mode_space"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:onClick="onClick"
            android:src="@drawable/image_btn_share"
            android:textColor="#FFF" />

    </RadioGroup>

</LinearLayout>