<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlbumActivity">

    <GridView
        android:id="@+id/galleryGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:numColumns="auto_fit"
        android:columnWidth="172dp"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp"
        android:gravity="center"
        android:stretchMode="columnWidth"
        android:background="#ffffff" />


</LinearLayout>